# solo-epd-loader

./: .coveragerc  .gitattributes  .gitignore  .readthedocs.yaml  .zenodo.json  CITATION.cff  MANIFEST.in  README.rst  codecov.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: pytest.yml
docs/: conf.py  index.rst
solo_epd_loader/: __init__.py  version.py
solo_epd_loader/data/test/l2/epd/ept/: solo_L2_epd-ept-asun-rates_20200603_V02.cdf  solo_L2_epd-ept-north-rates_20200603_V02.cdf  solo_L2_epd-ept-south-rates_20200603_V02.cdf  solo_L2_epd-ept-sun-rates_20200603_V02.cdf
solo_epd_loader/tests/: tests.py
