[build-system]
requires = [
  "setuptools>=62.1",
  "setuptools_scm[toml]>=8.0.0",
  "wheel",]
build-backend = "setuptools.build_meta"

[project]
name = "solo_epd_loader"
description = "Data loader for Solar Orbiter/EPD energetic charged particle sensors EPT, HET, and STEP."
requires-python = ">=3.9"
readme = { file = "README.rst", content-type = "text/x-rst" }
license = { file = "licenses/LICENSE.rst" }
authors = [
  { name = "Jan Gieseler", email = "jan.gieseler@utu.fi" },
]
dependencies = [
    "astropy",
    "cdflib",
    "drms",
    "h5netcdf",
    "lxml",
    "matplotlib",
    "numpy",
    "pandas",
    "requests",
    "sunpy>=4.1.0",
    "tqdm",
    "zeep",
]
dynamic = ["version"]
classifiers = [
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: BSD License",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Physics",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-doctestplus",
    "pytest-cov"
]
docs = [
    "sphinx",
    "sphinx-automodapi",
]
[project.urls]
repository = "https://github.com/jgieseler/solo-epd-loader"

[tool.setuptools]
zip-safe = false
include-package-data = true

[tool.setuptools.packages.find]
include = ["solo_epd_loader*"]
exclude = ["solo_epd_loader._dev*"]

[tool.setuptools_scm]
version_file = "solo_epd_loader/_version.py"

[tool.pytest.ini_options]
testpaths = [
  "solo_epd_loader",
  "docs",
]
doctest_plus = "enabled"
text_file_format = "rst"
addopts = [
  "--doctest-rst",
  "--ignore=solo_epd_loader/_dev",
]
python_files = [
  "test_*.py",
  "*_test.py",
  "test.py",
  "tests.py",
]

[tool.coverage.run]
omit = [
 "setup.py",
 "solo_epd_loader/_dev/*",
 "solo_epd_loader/_version*",
 "solo_epd_loader/conftest.py",
 "solo_epd_loader/*setup_package*",
 "solo_epd_loader/tests/*",
 "solo_epd_loader/*/tests/*",
 "solo_epd_loader/extern/*",
 "solo_epd_loader/version*",
 "*/solo_epd_loader/_dev/*",
 "*/solo_epd_loader/conftest.py",
 "*/solo_epd_loader/*setup_package*",
 "*/solo_epd_loader/tests/*",
 "*/solo_epd_loader/*/tests/*",
 "*/solo_epd_loader/extern/*",
 "*/solo_epd_loader/version*",
 "*/solo_epd_loader/_version*",
]

[tool.coverage.report]
exclude_lines = [
  # Have to re-enable the standard pragma
  "pragma: no cover",
  # Don't complain about packages we have installed
  "except ImportError",
  # Don't complain if tests don't hit assertions
  "raise AssertionError",
  "raise NotImplementedError",
  # Don't complain about script hooks
  "def main(.*):",
  # Ignore branches that don't pertain to this version of Python
  "pragma: py{ignore_python_version}",
  # Don't complain about IPython completion helper
  "def _ipython_key_completions_",
  # typing.TYPE_CHECKING is False at runtime
  "if TYPE_CHECKING:",
  # Ignore typing overloads
  "@overload",
]
